--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   text-decoration: none;
   cursor: pointer;
   letter-spacing: 0.75px;
-  font-family: 'Short Stack', cursive;
+  font-family: "Short Stack", cursive;
 }
 
 .section {
@@ -40,23 +40,22 @@ body {
   right: 250px;
   font-size: 64px;
   font-weight: 500;
-  font-family: 'Short Stack', cursive;
+  font-family: "Short Stack", cursive;
 }
 
-#highScore {
+#maxScore {
   position: absolute;
   top: 200px;
   right: 148px;
   font-size: 64px;
   font-weight: 500;
-  font-family: 'Short Stack', cursive;
+  font-family: "Short Stack", cursive;
 }
 
 #board {
   background: linear-gradient(rgb(245, 241, 4), rgb(206, 209, 26));
   width: 85vmin;
   height: 85vmin;
-  /* border: 2px solid black; */
   border-radius: 25px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 43%);
   display: grid;
@@ -66,20 +65,40 @@ body {
 
 .head {
   background-color: blueviolet;
-  border: .25vmin solid white;
+  border: 0.25vmin solid white;
   border-radius: 12px;
   transform: scale(1.2);
-
 }
 
 .food {
+  transition: transform ease-in-out;
   background-color: red;
+  border: 4px solid white;
   border-radius: 12px;
-  
 }
 
 .snake {
   background-color: rgb(230, 48, 190);
-  border: .25vmin solid white;
+  border: 0.25vmin solid white;
   border-radius: 12px;
+}
+
+#instructions {
+  height: 200px;
+  width: 500px;
+  box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 43%);
+  position: absolute;
+  top: 75vh;
+  left: 40px;
+  border-style: ridge;
+  background-color: blanchedalmond;
+  border-radius: 25px;
+}
+
+#instructions h3 {
+  padding: 10px 5px;
+  font-size: 32px;
+  font-family: "Short Stack", cursive;
+  font-weight: 500;
+  text-align: center;
 }
